# podscribe

./: .gitignore  PACKAGING.md  README.md  main.py  pyproject.toml  setup.sh  transcriber.py
podcasttf/: ai_postprocess.py  main.py  podcast_downloader.py  setup_helper.py  task_state.py  transcriber.py
podscribe/: ai_postprocess.py  app_service.py  config.py  gui.py  main.py  podcast_downloader.py  setup_helper.py  srt_formatter.py  task_state.py  transcriber.py
tests/: test_app_service.py  test_gui_helpers.py
